fix up the discord FAB on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -296,11 +296,11 @@ padding:8px
 	margin-right: 4px;
 }
 @media only screen and (max-width: 726px) {
-	/*body {
+	body {
 		margin-bottom: 54px;
-	}*/
-	.FAB{
-		display: none
+	}
+	.FAB__text__text{
+		display: none;
 	}
 }
 
